# AgentHub

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  registry.json
TODO/: 00-TODO-SPEC.md  README.md
TODO/归档/: 001-模型设置持久化.md
agents/: README.md  dev-agent.md  life-agent.md  main-agent.md  model-config.json  ops-agent.md  productivity-agent.md  registry.json  router.md
agents/templates/: agent-card-template.json
apps/dashboard/: README.md
apps/landing-page/: index.html
apps/tool-detector/: api.py  index.html  start.bat
config/: models.yaml
dev/: README.md  install.sh  开发计划.md  开发进度.md
docs/: DEPLOYMENT.md  QUICK_REFERENCE.md  SOP.md  SPEC.md  multi-ai-folder-design.md  skill-format.md  web-design.md  开发资料.md  项目愿景.md
docs/design/: cli-design.md  memory-system.md  skill-format.md  structure.md
docs/for-ai/: AI_DEVELOPER_GUIDE.md  AI_GUIDE.md  INITIALIZATION_SOP.md  task-handoff.md
memory/: README.md  SKILL.md
misc/: README.md  install-linux.sh  install-wsl.sh  install.ps1  install.sh  uninstall-macos.sh  uninstall-wsl.sh  uninstall.ps1  uninstall.sh  update-linux.sh  update.sh
profile/: identity.yaml  projects.md
projects/: README.md
scripts/: install.ps1  install.sh  setup-symlinks.ps1
secrets/: README.md  accounts.yaml.example  api_keys.yaml.example
skills/: 00-SKILL-SPEC.md
文档/: README.md  cli-design.md  memory-design.md  quick-start.md  skill-format.md
智能体/: README.md  dev-agent.md  main-agent.md  productivity-agent.md
测试/: test_agent.py  test_skill.py
脚本/: init.ps1  init.sh  init_project.py
项目/: README.md
(+120 files in other folders)
